--- a/retrogaming-frontend/package.json
+++ b/retrogaming-frontend/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "overrides": {
+  "@types/react": "18.2.14",
+  "@types/react-dom": "18.2.7"
+}
+,
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
