--- a/retrogaming-frontend/package.json
+++ b/retrogaming-frontend/package.json
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "overrides": {
-  "@types/react": "18.2.14",
-  "@types/react-dom": "18.2.7"
-}
-,
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.7"
+  },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
@@ -27,5 +26,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.9.4"
   }
 }
