--- a/retrogaming-frontend/package.json
+++ b/retrogaming-frontend/package.json
@@ -16,8 +16,6 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -28,6 +26,8 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.7"
   }
 }
