--- a/retrogaming-frontend/package.json
+++ b/retrogaming-frontend/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.7"
   },
   "devDependencies": {
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.7",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-react": "^5.0.4",
@@ -26,8 +28,8 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.4",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^7.9.4"
   }
 }
