--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,7 @@
 JWT_SECRET=1q2w3e4r5t
+
+  host: '127.0.0.1',
+  user: 'root',
+  password: '12345',
+  database: 'retrogaming',
+  connectionLimit: 5
